# fastapi

./: .env.example  .gitignore  README.md  pyproject.toml
src/: dependecies.py  main.py
src/db/: db_ahandler.py  sections_content_retrieval.py
src/lib/: generate_markdown.py  logging_config.json
src/routes/: delete_routes.py  fetch_routes.py  insert_routes.py
src/schemas/models/: document.py  models.py  procedure_graph.py
